# Test-0

./: .env  .pre-commit-config.yaml  dummy.txt  init_db.py  pyproject.toml  test_db.py
.github/scripts/: dump_db.sh  sync_db.py  sync_railway_data.py
.github/workflow/: test.yml
.github/workflows/: stale.yml  sync.yml  test.yml
llm/: chat.py
